05-securing-with-mtls/examples/strict-pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: $STUDENT_NS
spec:
  mtls:
    mode: STRICT
